[metadata]
name = nb-init
version = 0.1.5
author = Olivier BEDOUET
author_email = 
description = Netbox initializer using pynetbox
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = https://github.com/netboxlabs/netbox-initializers/issues
    Source = https://github.com/netboxlabs/netbox-initializers
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: System :: Networking
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    
[files]
packages = nb_init

[entry_points]
console_scripts =
    nb-init = nb_init.cli:main
    
[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.12.0
    black>=22.0.0
    flake8>=3.9.0
    mypy>=0.950